GIW fixes: - allow users to edit inventory table behind GIW data table (using absolutePanel instead of showModal/modalDialog) - adjust column widths

--- a/www/custom.css
+++ b/www/custom.css
@@ -94,6 +94,13 @@ th[aria-label^="Grant Number"] {
     white-space: nowrap;
 }
 
+th[aria-label^="Applicant Name"],
+#inventory-giw_tbl tbody td:nth-child(2),
+th[aria-label^="Project Name"] {
+  min-width: fit-content;
+    white-space: nowrap;
+}
+
 /*the container div of the field control dropdown on Inventory*/
 /*positioning so search bar is in line with it*/
 #inventory-field_display_control_state {
@@ -102,6 +109,13 @@ th[aria-label^="Grant Number"] {
   padding: 10px; 
   position: absolute;
   z-index: 1;
+}
+
+
+#inventory-close_giw {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 
